alpm-types/src/snapshots/url::test_source_url_parsing_failure@case_6.snap
---
source: alpm-types/src/url.rs
---
error: invalid hg revision type
 | 
 | hg+https://example/project#commit=154021a
 | ~~~~~~~~~~~~~~~~~~~~~~~~~~~^ expected `branch`
 | 
 = while parsing:
   source url: (hg+https://example/p…)
   → invalid hg revision type
   → expected `branch`, `revision`, `tag`
